Bug 1171073 - Suppress content scrolling issue on 64-bit platforms. r=kats